--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,10 +18,27 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
+    Properties properties = new Properties()
+    if (rootProject.file("keys.properties").exists()) {
+        properties.load(rootProject.file("keys.properties").newDataInputStream())
+    }
+
+    signingConfigs {
+        release {
+            storeFile file(properties.getProperty("nameStoreFile"))
+            storePassword properties.getProperty("storePassword")
+            keyAlias properties.getProperty("keyAlias")
+            keyPassword properties.getProperty("keyPassword")
+        }
+    }
+
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
+            shrinkResources false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+
+            signingConfig signingConfigs.release
         }
     }
     compileOptions {
